--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,24 @@ jobs:
         - chmod +x gradle/wrapper/gradle-wrapper.jar
       script:
         - ./gradlew test jvmTest ktlintCheck
+    - name: Android Kotlin Extensions
+        env:
+          - JAVA_OPTS="-XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError -Xmx2048m"
+        language: android
+        dist: trusty
+        components:
+          - tools
+          - platform-tools
+          - extra-android-m2repository
+        before_install:
+          - yes | sdkmanager "platforms;android-28"
+          - yes | sdkmanager "build-tools;29.0.0"
+        licenses:
+          - 'android-sdk-preview-license-52d11cd2'
+          - 'android-sdk-license-.+'
+          - 'google-gdk-license-.+'
+        before_script:
+          - chmod +x gradlew
+          - chmod +x gradle/wrapper/gradle-wrapper.jar
+        script:
+          - ./gradlew test jvmTest ktlintCheck --parallel
