--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
-kotlin_version = 1.3.41
+kotlin_version=1.3.41
+trikot_foundation_version=0.0.1
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
