--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
-kotlin_version=1.3.41
-trikot_foundation_version=0.0.1
+kotlin_version=1.3.50
+kotlin.native.version=1.3.50
+trikot_foundation_version=0.1.1
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
