--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 allprojects {
     repositories {
         google()
+        mavenLocal()
         jcenter()
         maven { url "https://kotlin.bintray.com/kotlinx" }
     }
