--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 kotlin_version=1.3.61
 trikot_foundation_version=0.27.1
+kotlin_coroutines_version=1.3.3
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
