Use JS IR compiler

--- a/streams/build.gradle
+++ b/streams/build.gradle
@@ -8,7 +8,9 @@ plugins {
 repositories {
     google()
     jcenter()
+    mavenLocal()
     mavenCentral()
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
     maven { url "https://kotlin.bintray.com/kotlinx" }
     maven { url 'https://jitpack.io' }
     maven { url('https://s3.amazonaws.com/mirego-maven/public') }
