--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
         maven { url "https://plugins.gradle.org/m2/" }
     }
 
@@ -22,5 +24,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        mavenLocal()
+        maven { url "http://dl.bintray.com/kotlin/kotlin-eap" }
     }
 }
