--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
-kotlin_version=1.3.70
-trikot_foundation_version=0.30.1
+kotlin_version=1.4-M1
+trikot_foundation_version=0.31.1-SNAPSHOT
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
@@ -8,3 +8,4 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
+kotlin.js.compiler=ir
