--- a/streams/build.gradle
+++ b/streams/build.gradle
@@ -64,6 +64,17 @@ kotlin {
                 implementation "com.mirego.trikot:trikotFoundation-js:$trikot_foundation_version"
                 implementation 'org.jetbrains.kotlin:kotlin-stdlib-js'
             }
+
+            compileKotlinJs {
+                kotlinOptions.metaInfo = true
+                kotlinOptions.sourceMap = true
+                kotlinOptions.sourceMapEmbedSources = "always"
+                kotlinOptions.suppressWarnings = false
+                kotlinOptions.verbose = true
+                kotlinOptions.main = "call"
+                kotlinOptions.moduleKind = "commonjs"
+                kotlinOptions.freeCompilerArgs = ["-Xuse-experimental=kotlin.ExperimentalUnsignedTypes"]
+            }
         }
 
         nativeMain {
