--- a/streams/build.gradle
+++ b/streams/build.gradle
@@ -1,8 +1,19 @@
 plugins {
     id 'kotlin-multiplatform'
+    id 'com.android.library'
     id 'org.jlleitschuh.gradle.ktlint'
     id 'mirego.release' version '1.13'
     id 'mirego.publish' version '1.0'
+}
+
+android {
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
+
+    defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 29
+    }
 }
 
 repositories {
@@ -17,8 +28,13 @@ repositories {
 group 'com.mirego.trikot'
 
 kotlin {
+    android {
+        publishAllLibraryVariants()
+    }
+
     targets {
         fromPreset(presets.jvm, 'jvm')
+        fromPreset(presets.android, 'android')
         fromPreset(presets.js, 'js')
         fromPreset(presets.iosArm32, 'iosArm32')
         fromPreset(presets.iosArm64, 'iosArm64')
@@ -61,6 +77,19 @@ kotlin {
             dependencies {
                 implementation "com.mirego.trikot:trikotFoundation-js:$trikot_foundation_version"
                 implementation 'org.jetbrains.kotlin:kotlin-stdlib-js'
+            }
+        }
+
+        androidMain {
+            dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+            }
+        }
+
+        androidTest {
+            dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-test'
+                implementation 'org.jetbrains.kotlin:kotlin-test-junit'
             }
         }
 
