--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
-kotlin.js.compiler=ir
+kotlin.js.compiler=both
