--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 kotlin.code.style=official
-kotlin_version=1.3.70
-trikot_foundation_version=0.30.1
+kotlin_version=1.4-M3
+trikot_foundation_version=0.30.1-1.4-M3
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
