Migrate to Kotlin 1.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 kotlin.code.style=official
-kotlin_version=1.4-M3
-trikot_foundation_version=0.30.1-1.4-M3
+kotlin_version=1.4.0
+kotlin.mpp.enableGranularSourceSetsMetadata=true
+kotlin.native.enableDependencyPropagation=false
+trikot_foundation_version=1.0.0-SNAPSHOT
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
