--- a/android-ktx/build.gradle
+++ b/android-ktx/build.gradle
@@ -10,6 +10,7 @@ plugins {
 repositories {
     google()
     jcenter()
+    mavenLocal()
     mavenCentral()
     maven { url('https://s3.amazonaws.com/mirego-maven/public') }
 }
@@ -30,7 +31,7 @@ configurations.all {
 }
 
 dependencies {
-    api 'com.mirego.trikot:streams:0.63.1'
+    api 'com.mirego.trikot:streams:1.0.0-SNAPSHOT'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-reactivestreams-ktx:2.2.0'
 }
