Update version numbers to non snapshot version

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style=official
 kotlin_version=1.4.0
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
-trikot_foundation_version=1.0.0-SNAPSHOT
+trikot_foundation_version=1.0.0
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
