Publish android sources

--- a/android-ktx/build.gradle
+++ b/android-ktx/build.gradle
@@ -43,10 +43,16 @@ release {
     tagPrefix = 'android-ktx-'
 }
 
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set('sources')
+}
+
 publishing {
     publications {
         mavenAar(MavenPublication) {
             from components.android
+            artifact sourcesJar
         }
     }
 }
