Add IR support for the javascript generation

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style=official
 kotlin_version=1.4.21
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
-trikot_foundation_version=1.0.24
+trikot_foundation_version=1.0.25-SNAPSHOT
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
