Remove ktx and update foundation

--- a/streams/build.gradle
+++ b/streams/build.gradle
@@ -83,6 +83,10 @@ kotlin {
 
         androidMain {
             dependsOn commonMain
+            dependencies {
+                implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+                implementation 'androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.0'
+            }
         }
 
         androidTest {
