--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ kotlin_version=1.5.10
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
-trikot_foundation_version=2.2.0
+kotlin.native.binary.memoryModel=experimental
+trikot_foundation_version=2.3.0-SNAPSHOT
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
